k8s/disciplina-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disciplina-service
spec:
  selector:
    app: disciplina
  ports:
    - port: 3001
      targetPort: 3001
