k8s/matricula-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matricula-service
spec:
  selector:
    app: matricula
  ports:
    - port: 3003
      targetPort: 3003
