k8s/usuario-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuario-service
spec:
  selector:
    app: usuario
  ports:
    - port: 3002
      targetPort: 3002
